--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,21 +1,16 @@
-    <!-- Header -->
-    <header class="intro-header">
-        <div class="container">
-            <div class="intro-message">
-                <h1>Landing Page</h1>
-                <h3>A Template by Start Bootstrap</h3>
-                <hr class="intro-divider">
-                <ul class="list-inline intro-social-buttons">
-                    <li class="list-inline-item">
-                        <a href="#" class="btn btn-secondary btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a href="#" class="btn btn-secondary btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a href="#" class="btn btn-secondary btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </header>
+<section class="jumbotron text-center">
+  <div class="container">
+    <h1 class="jumbotron-heading text-uppercase">Annika Johnsson</h1>
+    <p class="small text-muted text-lowercase">Art Director / Franka Design</p>
+    <div>
+      <ul class="list-inline">
+        <li class="list-inline-item">
+          <a href="#"><i class="fa fa-instagram"><span></span></i></a>
+        </li>
+        <li class="list-inline-item">
+          <a href="#"><i class="fa fa-linkedin"><span></span></i></a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</section>
